tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/localitiesPending.check
newSource:5: error: effect type mismatch;
 found   : @mod() @loc(c)
 required: @mod() @loc(a)
@loc(c) does not conform to @loc(a)
    case c: C => c
                 ^
